--- a/config/clecotools/default/core.entity_view_display.node.product.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_slug
     - field.field.node.product.field_upc
+    - field.field.node.product.field_web_display_sort_order
     - node.type.product
   module:
     - text
@@ -129,6 +130,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 103
+    region: content
+  field_web_display_sort_order:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 115
     region: content
   links:
     settings: {  }
