--- a/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_slug
     - field.field.node.product.field_upc
+    - field.field.node.product.field_web_display_sort_order
     - node.type.product
   module:
     - text
@@ -52,6 +53,7 @@ hidden:
   field_sku_group: true
   field_slug: true
   field_upc: true
+  field_web_display_sort_order: true
   langcode: true
   search_api_excerpt: true
   uuid: true
