Apex-161: Creation for privacy policy and return policy and brands pages styling.

--- a/config/campbell/default/block.block.pagetitle.yml
+++ b/config/campbell/default/block.block.pagetitle.yml
@@ -9,7 +9,7 @@ dependencies:
 id: pagetitle
 theme: campbell
 region: pre_content
-weight: -18
+weight: -17
 provider: null
 plugin: page_title_block
 settings:
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/about-us\r\n/warranty"
+    pages: "/about-us\r\n/warranty\r\n/return-policy\r\n/companion-brands\r\n/privacy-policy"
