--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_gb.yml
@@ -22,6 +22,13 @@ source:
     - name: remote_product_upc
       label: Product UPC
       selector: Values
+    - name: remote_table_sort_order
+      label: Table Sort Order
+      selector: Values
+    - name: remote_web_display_sort_order
+      label: Web Display Sort Order
+      selector: Values
+
   ids:
     remote_sku:
       type: string
@@ -60,6 +67,14 @@ process:
     plugin: apex_get_attribute_value
     source: remote_product_upc
     attribute: ATT539
+  field_sr_number:
+    plugin: apex_get_attribute_value
+    source: remote_table_sort_order
+    attribute: "Table Sort Order"
+  field_web_display_sort_order:
+    plugin: apex_get_attribute_value
+    source: remote_web_display_sort_order
+    attribute: ATT15738
 destination:
   plugin: 'entity:node'
   bundle: product_model
