APEX-123: Description is changed in sign up form

--- a/config/campbell/default/webform.webform.sign_up.yml
+++ b/config/campbell/default/webform.webform.sign_up.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: sign_up
 title: 'Sign up'
-description: test
+description: "<p>Used in Homepage Stay Involved section\r\n</p>"
 category: ''
 elements: |-
   email:
