--- a/config/campbell/default/webform.webform.contact_us.yml
+++ b/config/campbell/default/webform.webform.contact_us.yml
@@ -260,9 +260,9 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: url
+  confirmation_type: page
   confirmation_url: /about/contact-us/submission
-  confirmation_title: ''
+  confirmation_title: 'Contact Us'
   confirmation_message: 'Thank you, your submission has been received.'
   confirmation_attributes: {  }
   confirmation_back: false
