--- a/config/campbell/default/migrate_plus.migration.campbell_product_classifications_level_one.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_product_classifications_level_one.yml
@@ -26,6 +26,10 @@ source:
       name: remote_term_name
       label: 'Term Name'
       selector: Name
+    -
+      name: remote_listing_image
+      label: 'Listing Image'
+      selector: .
   ids:
     remote_term_id:
       type: string
@@ -33,10 +37,6 @@ process:
   name:
     plugin: skip_on_empty
     method: row
-    source: remote_term_name
-  dump_sourcevar:
-    plugin: callback
-    callable: var_dump
     source: remote_term_name
   vid:
     plugin: default_value
@@ -59,6 +59,10 @@ process:
       - W1_27025
       - W1_27261
       - W1_27260
+  listing_menu_image:
+    source: remote_listing_image
+    plugin: apex_get_category_menu_image
+  field_listing_menu_image/target_id: '@listing_menu_image'
 destination:
   plugin: 'entity:taxonomy_term'
 migration_dependencies: null
