APEX-378: Verify the Advance Drilling Application enquiry form

--- a/composer.json
+++ b/composer.json
@@ -111,6 +111,7 @@
         "drupal/imagemagick": "^3.4",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui": "^1.4",
+        "drupal/jquery_ui_sortable": "^1.1",
         "drupal/jsonapi_extras": "^3.23",
         "drupal/layout_paragraphs": "^1.0@beta",
         "drupal/limited_field_widgets": "^2.0",
