--- a/docroot/themes/custom/atg/atg.libraries.yml
+++ b/docroot/themes/custom/atg/atg.libraries.yml
@@ -26,5 +26,5 @@ advanced-selector:
     - core/jquery.ui.data
     - core/jquery.ui.scroll-parent
     - core/jquery.ui.mouse
-    - core/jquery.ui.sortable
+    - jquery_ui_sortable/sortable
     - core/drupal
