--- a/docroot/themes/custom/cleco/cleco.info.yml
+++ b/docroot/themes/custom/cleco/cleco.info.yml
@@ -8,6 +8,7 @@ libraries:
   - cleco/base-css
   - cleco/base-js
   - cleco/drupal
+  - atg/advanced-selector
 regions:
   header: 'Header'
   header_language: 'Language Selector'
