APEX-397:Added exclude term checking.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_model.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_model.yml
@@ -63,6 +63,7 @@ process:
     parent_migration_id: cleco_product_specifications
     migration_id: cleco_product_specifications_list
     get_predefined_attributelist: 1
+    get_excluded_attributelist: 1
   field_model_specification:
     plugin: sub_process
     source: '@product_specifications_array'
