--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model.yml
@@ -52,6 +52,7 @@ process:
     migration_id: cleco_product_specifications_list
     # allowed_attributes is populated/fetched from get_predefined_attributelist
     get_predefined_attributelist: 1
+    get_excluded_attributelist: 1
 
   field_model_specification:
     plugin: sub_process
