--- a/config/clecotools/default/user.role.anonymous.yml
+++ b/config/clecotools/default/user.role.anonymous.yml
@@ -7,6 +7,7 @@ dependencies:
     - taxonomy.vocabulary.department
     - taxonomy.vocabulary.distributor_level
     - taxonomy.vocabulary.news_insights
+    - taxonomy.vocabulary.product_classifications
     - taxonomy.vocabulary.product_filters
     - taxonomy.vocabulary.products
     - taxonomy.vocabulary.products_offered
@@ -36,6 +37,7 @@ permissions:
   - 'select terms in department'
   - 'select terms in distributor_level'
   - 'select terms in news_insights'
+  - 'select terms in product_classifications'
   - 'select terms in product_filters'
   - 'select terms in products'
   - 'select terms in products_offered'
@@ -79,6 +81,7 @@ permissions:
   - 'view term names in department'
   - 'view term names in distributor_level'
   - 'view term names in news_insights'
+  - 'view term names in product_classifications'
   - 'view term names in product_filters'
   - 'view term names in products'
   - 'view term names in products_offered'
@@ -87,6 +90,7 @@ permissions:
   - 'view terms in department'
   - 'view terms in distributor_level'
   - 'view terms in news_insights'
+  - 'view terms in product_classifications'
   - 'view terms in product_filters'
   - 'view terms in products'
   - 'view terms in products_offered'
