--- a/config/clecotools/default/user.role.editor.yml
+++ b/config/clecotools/default/user.role.editor.yml
@@ -27,6 +27,7 @@ dependencies:
     - taxonomy.vocabulary.continent
     - taxonomy.vocabulary.department
     - taxonomy.vocabulary.distributor_level
+    - taxonomy.vocabulary.product_classifications
     - taxonomy.vocabulary.product_filters
     - taxonomy.vocabulary.products
     - taxonomy.vocabulary.products_offered
@@ -172,6 +173,7 @@ permissions:
   - 'create terms in continent'
   - 'create terms in department'
   - 'create terms in distributor_level'
+  - 'create terms in product_classifications'
   - 'create terms in product_filters'
   - 'create terms in products'
   - 'create terms in products_offered'
@@ -357,6 +359,7 @@ permissions:
   - 'translate continent taxonomy_term'
   - 'translate department taxonomy_term'
   - 'translate distributor_level taxonomy_term'
+  - 'translate product_classifications taxonomy_term'
   - 'translate product_filters taxonomy_term'
   - 'translate products taxonomy_term'
   - 'translate products_offered taxonomy_term'
