--- a/config/clecotools/default/core.entity_form_display.taxonomy_term.product_classifications.default.yml
+++ b/config/clecotools/default/core.entity_form_display.taxonomy_term.product_classifications.default.yml
@@ -3,9 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.product_classifications.field_category_description
+    - field.field.taxonomy_term.product_classifications.field_category_image
     - field.field.taxonomy_term.product_classifications.field_classification_id
+    - field.field.taxonomy_term.product_classifications.field_product_display_order
     - taxonomy.vocabulary.product_classifications
   module:
+    - media_library
     - path
     - text
 id: taxonomy_term.product_classifications.default
@@ -21,9 +25,32 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_category_description:
+    type: string_textarea
+    weight: 103
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_category_image:
+    type: media_library_widget
+    weight: 104
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_classification_id:
     type: string_textfield
     weight: 101
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_product_display_order:
+    type: string_textfield
+    weight: 102
     region: content
     settings:
       size: 60
