APEX-159: Media center pages.

--- a/config/campbell/default/block.block.campbellmarketing.yml
+++ b/config/campbell/default/block.block.campbellmarketing.yml
@@ -12,7 +12,7 @@ dependencies:
 id: campbellmarketing
 theme: campbell
 region: sidebar_second
-weight: -21
+weight: -27
 provider: null
 plugin: 'fixed_block_content:campbell_marketing'
 settings:
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /contact-us
+    pages: /about/contact-us
