--- a/config/campbell/default/fixed_block_content.fixed_block_content.campbell_strength.yml
+++ b/config/campbell/default/fixed_block_content.fixed_block_content.campbell_strength.yml
@@ -10,4 +10,5 @@ id: campbell_strength
 title: 'Campbell Strength'
 block_content_bundle: media_block
 default_content: null
+auto_export: null
 protected: true
