--- a/config/campbell/default/block.block.authorizedrepair.yml
+++ b/config/campbell/default/block.block.authorizedrepair.yml
@@ -12,12 +12,12 @@ dependencies:
 id: authorizedrepair
 theme: campbell
 region: sidebar_second
-weight: -20
+weight: -26
 provider: null
 plugin: 'fixed_block_content:authorized_repair'
 settings:
   id: 'fixed_block_content:authorized_repair'
-  label: 'Authorized Repair'
+  label: 'Authorized Repair:'
   label_display: visible
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /contact-us
+    pages: /about/contact-us
