APEX-334: adding contatc page title and block config

--- a/config/campbell/default/block.block.pagetitle.yml
+++ b/config/campbell/default/block.block.pagetitle.yml
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/about-us\r\n/warranty\r\n/return-policy\r\n/companion-brands\r\n/privacy-policy"
+    pages: "/about-us\r\n/about-us/contact-us\r\n/warranty\r\n/return-policy\r\n/companion-brands\r\n/privacy-policy"
