--- a/config/campbell/default/block.block.authorizedrepair.yml
+++ b/config/campbell/default/block.block.authorizedrepair.yml
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /about/contact-us
+    pages: /about-us/contact-us
