--- a/config/campbell/default/block.block.contactcampbell.yml
+++ b/config/campbell/default/block.block.contactcampbell.yml
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/about/contact-us\r\n/warranty\r\n/return-policy"
+    pages: "/about-us/contact-us\r\n/warranty\r\n/return-policy"
