--- a/config/campbell/default/block.block.contactcampbell_news.yml
+++ b/config/campbell/default/block.block.contactcampbell_news.yml
@@ -17,7 +17,7 @@ provider: null
 plugin: 'fixed_block_content:contact_campbell'
 settings:
   id: 'fixed_block_content:contact_campbell'
-  label: Contact-Campbell
+  label: 'Contact-Campbell(News pages)'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
