--- a/config/campbell/default/editor.editor.full_html.yml
+++ b/config/campbell/default/editor.editor.full_html.yml
@@ -13,6 +13,7 @@ third_party_settings:
     scheme: public
     directory: inline-files
     extensions: txt
+    max_size: ''
 _core:
   default_config_hash: o28gj4WoTtT0od1KkSGLl0Y_PdVi_fezPICNqMz-0uM
 format: full_html
@@ -26,6 +27,7 @@ settings:
           items:
             - Bold
             - Italic
+            - Underline
             - Strike
             - Superscript
             - Subscript
