--- a/config/campbell/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/campbell/default/core.entity_view_display.node.page.search_index.yml
@@ -6,10 +6,10 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
-    - entity_reference_revisions
     - text
     - user
 _core:
@@ -26,16 +26,9 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_components:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings: {  }
-    weight: 1
-    region: content
 hidden:
+  field_components: true
+  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
