--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -105,6 +105,7 @@ module:
   paragraphs_component_field: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   permissions_filter: 0
   purge: 0
   purge_drush: 0
